Update and rename info_S6.Full.Note5-NewUX.Port_V1 to info_S6.Full.Note5-NewUX.Port_V1.2

--- a/info_S6.Full.Note5-NewUX.Port_V1.2
+++ b/info_S6.Full.Note5-NewUX.Port_V1.2
@@ -10,6 +10,8 @@
 &
 & 修复:红外线传感器不工作
 &
+& 修复:刷机脚本错误，解决G9250问题
+&
 & 修复:下拉手电筒导致系统界面FC问题
 &
 & 修复:再某一界面回到主页,弹出输入法问题
@@ -41,6 +43,8 @@
 & 美化:NOTE7开关机动画
 &
 & 更新:所有APP到最新
+&
+& 更新：G9250内核到2.0，修复开机红字
 &
 & 破解:系统核心
 &
