--- a/info_S6.Full.Note5-NewUX.Port_V1.2
+++ b/info_S6.Full.Note5-NewUX.Port_V1.2
@@ -30,15 +30,19 @@
 &
 & 添加:系统更新,S 控制台打开
 &
-& 添加移植版手控版Note7悬浮预览.S 控制台打开
+& 添加:移植版手控版Note7悬浮预览.S 控制台打开
 &
 & 添加:NOTE7全套edge功能
+&
+& 添加:私密模式&应用锁中指纹解锁
 &
 & 添加:多种V4a音效配置
 &
 & 添加:USIM卡应用....
 &
 & 添加:NOTE7开关机声音
+&
+& 添加:系统更新.S 控制台中
 &
 & 美化:NOTE7开关机动画
 &
