--- a/info_S6.Full.Note5-NewUX.Port_V1.2
+++ b/info_S6.Full.Note5-NewUX.Port_V1.2
@@ -20,7 +20,6 @@
 &
 & 修改:框架最大电池容量为官方,电量统计更为准确
 &
-& 精简:设置中无用 Spen,系统更新选项
 &
 & 精简:如S PAY之类的全套组件
 &
@@ -34,7 +33,7 @@
 &
 & 添加:NOTE7全套edge功能
 &
-& 添加:私密模式&应用锁中指纹解锁
+& 添加:私密模式和应用锁中指纹解锁
 &
 & 添加:多种V4a音效配置
 &
